Atualização das Páginas Spring

--- a/AgenciaDeViagensSpring/src/main/resources/templates/promocao/edicao.html
+++ b/AgenciaDeViagensSpring/src/main/resources/templates/promocao/edicao.html
@@ -26,15 +26,15 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link" href="../home">Home</a>
-                            <a class="nav-link" href="../passageiro">Cadastro</a>
-                            <a class="nav-link" href="../destino">Destino</a>
-                            <a class="nav-link active" aria-current="page" href="../promocao">Promoções</a>
-                            <a class="nav-link" href="../voo">Voos</a>
-							<a class="nav-link" href="../hotel">Hotéis</a>
-							<a class="nav-link" href="../passagem">Passagem</a>
-                            <a class="nav-link" href="../contato">Contato</a>
-                            <a class="nav-link" href="../sobre">Sobre</a>
+                            <a class="nav-link" href="../../home">Home</a>
+                            <a class="nav-link" href="../../passageiro">Cadastro</a>
+                            <a class="nav-link" href="../../destino">Destino</a>
+                            <a class="nav-link active" aria-current="page" href="../../promocao">Promoções</a>
+                            <a class="nav-link" href="../../voo">Voos</a>
+							<a class="nav-link" href="../../hotel">Hotéis</a>
+							<a class="nav-link" href="../../passagem">Passagem</a>
+                            <a class="nav-link" href="../../contato">Contato</a>
+                            <a class="nav-link" href="../../sobre">Sobre</a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
 			<div class="col-6 col-md">
 				<h5 class="sky">SKYTOUR</h5>
 				<ul class="list-unstyled text-small">
-					<li class="mb-1"><a class="link-secondary text-decoration-none" href="../home">Home</a>
+					<li class="mb-1"><a class="link-secondary text-decoration-none" href="../../home">Home</a>
 					</li>
 					<li class="mb-1"><a class="link-secondary text-decoration-none"
 							href="../passageiro">Cadastro</a></li>
