Organização das páginas MVC

--- a/AgenciaDeViagensSpring/src/main/resources/templates/agradecimento.html
+++ b/AgenciaDeViagensSpring/src/main/resources/templates/agradecimento.html
@@ -46,7 +46,7 @@
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../../IMG/passagem.jpg" class="d-block w-100"
+                        <img src="../../IMG/Ilhas Maldivas.jpg" class="d-block w-100"
                             style="height: 1000px; object-fit: cover;" alt="...">
                         <div class="container">
                             <div class="carousel-caption col-auto p-lg-5 mx-auto my-5 text-white">
