--- a/AgenciaDeViagensSpring/src/main/resources/templates/passagem/listar.html
+++ b/AgenciaDeViagensSpring/src/main/resources/templates/passagem/listar.html
@@ -43,7 +43,7 @@
 		<!-- FIM BARRA DE NAVEGAÇÃO -->
 		<!-- INÍCIO DO BANNER -->
 		<div class="position-relative overflow-hidden md-1 md-1">
-			<img src="../../IMG/Passagem.jpg" style="height: 750px; width: 100%;">
+			<img src="../../IMG/Voo.jpg" style="height: 750px; width: 100%;">
 		</div>
 		<!-- FIM DO BANNER -->
 		<!--INICIO LISTAGEM -->
